# Detach from the parent Keleusma workspace. This crate carries
# heavy bare-metal git dependencies (embassy, cortex-m-rt, defmt)
# and its own toolchain pin; pulling it into the parent workspace
# would force every parent build to resolve those deps. Keeping it
# detached lets the parent's `cargo build` stay light while
# allowing the example to be flashed and run with a single
# `cd examples/rtos && cargo run …`.
#
# `resolver = "2"` is required for build-dependency features to
# stay separate from runtime-dependency features. Without it,
# the `[build-dependencies]` entry below would attempt to pull
# `compile` and `verify` into the runtime image, which would
# defeat the size-reduction goal of the feature gating.
[workspace]
resolver = "2"

[package]
name = "keleusma-rtos"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = """
Draft Keleusma RTOS microkernel with cooperative scheduling.
See SPEC.md and MANUAL.md alongside this Cargo.toml.
"""
build = "build.rs"

[dependencies]
# The Keleusma runtime. Path dependency against the parent
# crate during development; this would become a versioned crates.io
# dependency once the example is decoupled from the parent.
#
# `default-features = false` keeps the runtime image lean. The
# `keleusma-compile` and `keleusma-verify` features below
# re-add the source-to-bytecode pipeline and the load-time
# verifier respectively. With both off, the runtime accepts
# only precompiled bytecode loaded under trust.
#
# The `text` and `floats` features are intentionally NOT
# enabled: task scripts use only integer and fixed-point
# arithmetic, and diagnostic logging is performed through the
# numeric `host::log_event` native. Dropping `text` removes the
# lexer, parser, and runtime support for `Value::StaticStr` and
# `Value::KStr` from the flash image. Dropping `floats` removes
# the `Value::Float` arm in the VM's binary-arith dispatch and
# the transitive soft-float compiler_builtins routines
# (`__divdf3`, `__adddf3`, `__muldf3`).
keleusma = { path = "../..", default-features = false }
# Needed at runtime when `keleusma-signatures` is on so the
# boot-time `setup::run_signed_self_test` path can construct a
# `VerifyingKey` from the embedded 32-byte public-key fixture.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"], optional = true }

# --- N6 platform dependencies. All optional, all gated on the
# `stm32n6570dk-platform` feature. ---

# Embassy crates pinned to the same revision as the
# `embassy_hello_n6` scaffold so the two crates stay in lock-step
# on toolchain and API expectations. The N6 family support is
# upstream-main only at this revision; bumping the pin requires
# revalidating that nothing in the chip support breaks.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "be30937ac9054dcbc2e618e0466467545c0f5edb", optional = true, features = [
    "defmt",
    "stm32n657x0",
    "time-driver-any",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "be30937ac9054dcbc2e618e0466467545c0f5edb", optional = true, features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "be30937ac9054dcbc2e618e0466467545c0f5edb", optional = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "be30937ac9054dcbc2e618e0466467545c0f5edb", optional = true, features = [
    "defmt",
] }

# Cortex-M55 runtime support.
cortex-m = { version = "0.7", optional = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7", optional = true }

# defmt logging over RTT.
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.0", optional = true }
panic-probe = { version = "1.0", optional = true, features = ["print-defmt"] }

# Required by some embassy traits and used by the platform impl
# for safe interior-mutable storage of peripheral handles.
critical-section = { version = "1.1", optional = true }

# Heap allocator for the bare-metal target. The kernel core uses
# `alloc` (Vec, String, format!, Box::leak for the arenas), so a
# global allocator must be installed on no_std targets.
embedded-alloc = { version = "0.6", optional = true }

# Build-time dependency on the parent crate with the full
# compile and verify pipelines enabled. Used by `build.rs` only
# when the runtime `keleusma-compile` feature is off, in which
# case build.rs precompiles every task script to bytecode in
# OUT_DIR. Cargo's resolver-2 keeps build-dependency features
# separate from runtime-dependency features, so enabling
# `compile` and `verify` here does not pull them into the
# runtime image.
[build-dependencies]
# Scripts compile without the `text` or `floats` features; the
# build-time pipeline therefore also runs with those features
# off so that the precompiled bytecode emitted by `build.rs`
# matches what the runtime would accept. `compile` and `verify`
# are enabled unconditionally so build.rs can run the full
# pipeline at host build time regardless of the runtime feature
# selection.
keleusma = { path = "../..", default-features = false, features = [
    "compile",
    "verify",
    "signatures",
] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }

[features]
default = ["std-platform", "keleusma-compile", "keleusma-verify"]
# The std-backed platform implementation and the demonstrator
# binary. Disable this feature for bare-metal builds where the
# host code chooses a different platform (e.g. embassy on the N6).
std-platform = []
# Pass-through to keleusma's `compile` feature. With this
# feature on, the runtime image contains the source-to-bytecode
# pipeline (lexer, parser, type checker, monomorphizer,
# compiler) and the task scripts are compiled at boot. With it
# off, build.rs precompiles every script through the parent's
# build-time compile pipeline and emits OUT_DIR/*.kel.bin; the
# runtime image then only carries the VM and the bytecode
# format. Off is the right choice for the smallest flash image
# on the embedded target; on is the right choice during script
# authoring or for the host demonstrator.
keleusma-compile = ["keleusma/compile"]
# Pass-through to keleusma's `verify` feature. With this
# feature on, `Vm::new` runs the structural verifier and the
# resource-bounds check at load. With it off, `Vm::new` skips
# verification and trust-loads the module; the host attests
# that verification was performed at build time. Off saves a
# further chunk of flash on top of the precompile feature.
keleusma-verify = ["keleusma/verify"]
# Pass-through to keleusma's `signatures` feature. With this on,
# the runtime image carries the Ed25519 verifier (sha2,
# curve25519-dalek, zeroize, ed25519-dalek) and the daughtership
# can verify signed scripts delivered over the comm link via
# `Vm::register_verifying_key` and `Vm::replace_module_from_bytes`.
# Off by default to keep the flash image lean; daughterships that
# only trust-load unsigned baked-in bytecode leave this disabled.
# Pulls the runtime dep on `ed25519-dalek` so the boot-time
# self-test path in `setup::run_signed_self_test` can construct a
# `VerifyingKey` from the embedded fixture.
keleusma-signatures = ["keleusma/signatures", "dep:ed25519-dalek"]
# The STM32N6570-DK platform implementation. Pulls in the embassy
# stack, defmt, cortex-m runtime, and a heap allocator. Enabling
# this feature on its own builds the no_std library against the
# real embassy backend; combine with `--target thumbv8m.main-none-eabihf`
# and the bin target `three-task-n6` to produce a flashable image.
stm32n6570dk-platform = [
    "dep:embassy-stm32",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "dep:critical-section",
    "dep:embedded-alloc",
]

[[bin]]
name = "three-task-std"
path = "src/bin/three_task_std.rs"
required-features = ["std-platform"]

[[bin]]
name = "three-task-n6"
path = "src/bin/three_task_n6.rs"
required-features = ["stm32n6570dk-platform"]

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
# Keep DWARF in the release ELF so probe-rs and defmt can resolve
# panic frames back to source locations. The flashed image is
# RAM-resident on the N6 (no on-chip flash); debug info increases
# the ELF size but does not enlarge the loaded section count.
debug = 2
# Abort on panic rather than unwinding. Unwinding pulls in a
# significant amount of metadata on bare-metal targets; an
# embedded kernel that panics is in an unrecoverable state
# regardless of unwinding support. `panic-probe` is configured
# to halt and report through defmt RTT before the abort, so the
# operator still sees the panic location.
panic = "abort"
